gitlabdep.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1golang-svc
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 32326
  selector:
    app: app1-golang
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-golang
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1-golang
  template:
    metadata:
      labels:
        app: app1-golang
    spec:
      containers:
        - name: app1-golang
          image: registry.gitlab.com/itoutposts1/app1-golang:branch-dev-2023-11-09-10-08-56
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: gitlab-auth
