test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1golang-svc
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: app1golang-svc
          servicePort: 80
